# SRS

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  act.ps1  docker-compose.yml  eval_classifier.py  load_test.py  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  support.db  test.db  test_ai_pipeline.db  test_forgot_password.py
.github/workflows/: ci.yml  cleanup.yml  deploy-backend.yml  deploy-staging.yml  tests.yml
alembic/: env.py
alembic/versions/: 8564907ee88e_phase5_columns.py  a1b2c3d4e5f6_add_otp_columns_to_users.py  add_assigned_agent_id_column.py  add_response_source_column.py  c3d4e5f6a7b8_hash_otp_column.py  d4e5f6a7b8c9_add_refresh_tokens_table.py  e5f6a7b8c9d0_add_ticket_sentiment_columns.py  f6a7b8c9d0e1_add_in_progress_status.py
app/: constants.py  main.py
app/api/: admin.py  auth.py  demo.py  dependencies.py  feedback.py  tickets.py
app/core/: config.py  error_handlers.py  exceptions.py  limiter.py  otp.py  security.py
app/db/: session.py
app/models/: feedback.py  refresh_token.py  ticket.py  user.py
app/schemas/: admin.py  feedback.py  ticket.py  user.py
app/services/: ai_service.py  classifier.py  decision.py  decision_engine.py  intent_classifier.py  response_generator.py  similarity.py  similarity_search.py  ticket_service.py
app/utils/: text_processing.py
docs/: PHASE_1_README.md  README.md  plan_doc.md
docs/deployment/: DEPENDENCY_AUDIT.md  NGINX.md
docs/specification/: TECHNICAL_SPEC.md  plan_doc.md
docs/tasks/: phase_1.md  phase_2.md  phase_3.md  phase_4.md  task.md
docs/tasks/Implemented/: PHASE_1_README.md
migrations/: 001_add_response_column.py  add_is_archived_column.py  add_password_reset_otp_columns.py  add_response_column.py
scripts/: generate-dev-cert.sh
ssl/: README.md
tests/: conftest.py  test_admin.py  test_admin_api.py  test_agent_assignment.py  test_ai_pipeline_integration.py  test_auth.py  test_automation_integration.py  test_automation_unit.py  test_comprehensive_fixes.py  test_comprehensive_suite.py  test_config.py  test_decision.py  test_decision_engine.py  test_error_handling.py  test_feedback_api.py  test_feedback_model.py  test_intent_classifier.py  test_nitpick_fixes.py  test_resolver.py  test_response_generator.py  test_security.py  test_session.py  test_similarity.py  test_similarity_cache.py  test_similarity_search.py  test_ticket_model.py  test_ticket_ownership.py  test_tickets_api.py  test_user_schemas.py
tests/api/: test_auth.py  test_new_endpoints.py  test_refresh_token.py  test_tickets.py
tests/models/: test_user_schemas.py
tests/services/: test_automation_integration.py  test_automation_unit.py  test_classifier_ai.py  test_comprehensive_suite.py  test_response_generator.py  test_sentiment_ai.py  test_similarity_search.py  test_ticket_ownership.py
workers/: cleanup.py  embedding_builder.py  feedback_analyzer.py  metrics_collector.py
